SpringBoot sandbox finish